Fixed font size issue causing click me buttons in work plans to overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ body{
 }
 /*Workout Plan Headers*/
 #workout-plans-layout h2{
-    font-size: 2.5rem;
+    font-size: 200%;
     margin: 1rem;
 }
 /*Workout Plan Line Breaks*/
